--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Frag">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <!--<TextView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Тренировка на вкусняшках"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="25sp"/>-->
+        android:textSize="25sp" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:orientation="vertical"
+    <!--    <androidx.viewpager2.widget.ViewPager2-->
+    <!--        android:orientation="vertical"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:id="@+id/vp" />-->
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/vp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
